sort.pancake.lessons.sort.pancake.BurnedPancake.scala.error
BurnedPancake:22: error: missing arguments for method estCrepeRetournee in class PancakeEntity;
follow this method with `_' if you want to treat it as a partially applied function
		if (estCrepeRetournee) {
                    ^